# blatherskite

./: .pre-commit-config.yaml  Cargo.toml  README.md  name_cleaner.rs  test.py  testable  testable.rs  whitespace.csv
.github/workflows/: default.yml
chatterbox/: Cargo.toml
chatterbox/src/: main.rs
scuttlebutt/: Cargo.toml  build.rs
scuttlebutt/migrations/2022-11-29-172636_test/: down.sql  up.sql
scuttlebutt/src/: db.rs  error.rs  main.rs  models.rs  responses.rs  schema.rs  tests.rs
