[package]
name = "chatterbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.24"
poem = { version = "1.3.43", features = ["websocket"] }
tokio = { version = "1.21.1", features = ["full"] }
tracing-subscriber = "0.3.15"
