[package]
name = "chatterbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
cassandra-cpp = "1.1.0"
chrono = "0.4.22"
futures-util = "0.3.24"
hex = "0.4.3"
poem = { version = "1.3.43", features = ["websocket"] }
rustflake = "0.1.1"
serde = "1.0.145"
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tracing-subscriber = "0.3.15"
