[package]
name = "scuttlebutt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
cassandra-cpp = "1.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
ctor = "0.1.23"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.17"
more-asserts = "0.3.0"
poem = { version = "1.3.42", features = ["test"] }
poem-openapi = { version = "2.0.12", features = ["swagger-ui"] }
pretty_assertions = "1.3.0"
rand = "0.8.5"
rustflake = "0.1.1"
serde = "1.0.144"
serde_json = "1.0.85"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.15"
